# apiw-rs

./: Cargo.toml  support_list.md
src/: lib.rs
src/application_support_functions/: mod.rs
src/extensions/: draw_ext.rs  mod.rs
src/graphics_subsystem/: device_context.rs  draw.rs  mod.rs  object.rs
src/shared/: mod.rs
src/utils/: mod.rs
src/windows_subsystem/: debug.rs  dialog.rs  menu.rs  message.rs  mod.rs  window.rs  window_graphics.rs
