[package]
name = "apiw"
version = "0.1.0"
edition = "2018"
authors = ["CrLF0710 <crlf0710@gmail.com>"]

[dependencies]
bitflags = "2"
derive_more = "0.99"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winuser", "winerror", "windowsx", "libloaderapi", "winnls", "commdlg"]}
wio = "0.2.2"
